# vaultctl

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.pi/: npm
.xtrm/reports/: 2026-04-14-322b72c.md
.xtrm/skills/active/claude/using-vaultctl/: SKILL.md
.xtrm/skills/default/using-specialists-v3/: SKILL.md
src/vaultctl/cli/: app.py  audit.py  graph.py  index.py  inspect.py  mcp.py  note.py  output.py  search.py  stats.py  translate.py
src/vaultctl/core/: config.py  errors.py  llm.py  models.py  paths.py
src/vaultctl/ingest/: markdown.py  normalizers.py  sources.py  transcripts.py
src/vaultctl/mcp/: adapters.py  server.py
src/vaultctl/services/: audit_service.py  graph_service.py  index_service.py  inspect_service.py  note_service.py  search_service.py  stats_service.py  translate_service.py
src/vaultctl/store/: audit.py  db.py  graph.py  indexer.py  link_resolver.py  queries.py  schema.sql  search.py  stats.py
tests/vaultctl/: test_vaultctl_e2e.py
